# Fish-image-model

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
latex/: Makefile  README.md  article.tex  refs.bib
