[tool.poetry]
name = "aai-mandatory-1"
version = "0.1.0"
description = ""
authors = ["Michael Fuglø <michael@fuglo.com>"]
readme = "README.md"
packages = [{include = "aai_mandatory_1"}]

[tool.poetry.dependencies]
python = "3.9.16"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.1"
keras = "^2.11.0"
tensorflow-macos = "^2.11.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
